--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-body">
             <a id="left" href="#">Header</a>
             <a id="right" href="#">SignUp</a>
-            <a id="right" href="#">Profile</a>
+            <a id="right" href="/profile.html">Profile</a>
         </div>
         <div class="signup">
             <h1>Signup</h1>
