--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header-body">
             <a id="left" href="#">Header</a>
-            <a id="right" href="#">SignUp</a>
+            <a id="right" href="/index.html">SignUp</a>
             <a id="right" href="#">Profile</a>
         </div>
         <div class="profile">
